date's bug fixed on ios

--- a/styles/style.css
+++ b/styles/style.css
@@ -208,7 +208,8 @@ a {
   text-align: left;
 }
 
-.date {
+.date,
+.date a {
   color: grey;
 }
 
